--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,8 @@ body {
   background-color: #f8fafb;
 }
 
-.sidebar-item:hover {
-  position: absolute;
-  left: 0;
-  width: 2px;
-  height: 20px;
-  background-color: #fff;
+.title {
+    padding: 10px 16px;
+    font-weight: 900;
+    font-size: 22px;
 }
